# indi-bresserexos2

./: .gitignore  BresserExosIIGoToDriver.cpp  BresserExosIIGoToDriver.hpp  BresserExosIIGoToDriver.xml  CMakeLists.txt  Config.hpp.in  ExosIIMountControl.hpp  IndiSerialWrapper.cpp  IndiSerialWrapper.hpp  Main.cpp  README.md  SerialCommand.cpp  SerialCommand.hpp  StateMachine.hpp  TestDataReceivedCallback.cpp  TestDataReceivedCallback.hpp  TestSerialImplementation.cpp  TestSerialImplementation.hpp  indi_bresserexos2.xml  indi_bresserexos2.xml.cmake
BresserGoTo_ReverseEngineer/: BresserGoTo_ReverseEngineer.sln
BresserGoTo_ReverseEngineer/BresserGoTo_ReverseEngineer/: App.xaml  App.xaml.cs  BresserGoTo_ReverseEngineer.csproj  CircularBuffer.cs  MainWindow.xaml  MainWindow.xaml.cs  RawSerialMessage.cs  RelayCommand.cs  SerialReverseEngineerDataModel.cs
BresserGoTo_ReverseEngineer/BresserGoTo_ReverseEngineer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Documentation/: ApplicationSetup.md  FAQ.md  Installation.md  Troubleshooting.md
Documentation/Schematics/: Schematics.md
Documentation/Schematics/JOC-SkyVision-DEC-Motor-Rev.1.03/: JOC-SkyVision-DEC-Motor-Rev.1.03.pro  JOC-SkyVision-DEC-Motor-Rev.1.03.sch
Documentation/Schematics/JOC-SkyVision-Handbox-Rev.1.09/: JOC-SkyVision-Rev.1.09.pro  JOC-SkyVision-Rev.1.09.sch
Documentation/Schematics/JOC-SkyVision-RA-Motor-Rev.1.03/: JOC-SkyVision-RA-Motor-Rev.1.03-cache.lib  JOC-SkyVision-RA-Motor-Rev.1.03.sch
Documentation/Schematics/JOC-SkyVision-Rev.1.09/: JOC-SkyVision-Rev.1.09.pro  JOC-SkyVision-Rev.1.09.sch  JOC-SkyVision-Rev.1.09.sch-bak
SerialDeviceControl/: CMakeLists.txt  CircularBuffer.hpp  CriticalData.hpp  INotifyPointingCoordinatesReceived.hpp  ISerialInterface.hpp  SerialCommand.cpp  SerialCommand.hpp  SerialCommandTransceiver.cpp  SerialCommandTransceiver.hpp
